<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/handyman"
                tools:context=".LoginActivity">

    <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_above="@+id/username"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/username"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:inputType="text"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_alignStart="@id/username"
            android:layout_alignLeft="@id/username"
            android:textColor="@color/white"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/login"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/password"
            android:layout_alignLeft="@id/password"
            android:layout_below="@id/password"
            android:text="@string/login"/>

</RelativeLayout>
